// DBML for Kick-off Football Management Platform

// --- Enums ---

Enum user_role {
  Player
  TeamLeader
  FieldOwner
  Moderator
}

Enum user_status {
  Active
  Suspended
  Banned
  Pending
  Deleted
}

Enum preferred_foot {
  Left
  Right
  Both
}

Enum verification_status {
  Pending
  Verified
  Rejected
  PendingRevision
}

Enum roster_role {
  Member
  Captain
  ViceCaptain
}

Enum request_status {
  Pending
  Accepted
  Rejected
}

Enum calendar_status {
  Available
  Booked
  Maintenance
  Blocked
}

Enum booking_status {
  Pending
  Confirmed
  Rejected
  Cancelled
}

Enum match_status {
  PendingApproval
  Scheduled
  InProgress
  Completed
  Cancelled
  LookingForField
}

Enum match_visibility {
  Public
  Private
}

Enum post_visibility {
  Public
  Private
  TeamOnly
}

Enum invitation_status {
  Pending
  Accepted
  Declined
  Expired
}

Enum attendance_status {
  Pending
  Present
  Absent
  Excused
}

Enum transaction_type {
  Income
  Expense
}

Enum reaction_entity_type {
  Post
  Comment
}

Enum reaction_type {
  Like
  Love
  Celebrate
}

Enum report_content_type {
  Post
  Comment
  User
}

Enum report_status {
  Pending
  Resolved
  Dismissed
}

Enum media_owner_type {
  Team
  Field
  Post
  Player
}

Enum media_file_type {
  Image
  Video
}

Enum moderation_action {
  Suspend
  Ban
  Reactivate
  ContentRemoval
  Warning
}

Enum day_of_week {
  Monday
  Tuesday
  Wednesday
  Thursday
  Friday
  Saturday
  Sunday
}

Enum notification_type {
  TeamVerified
  JoinRequest
  MatchInvite
  BookingUpdate
  AccountStatusUpdate
  TeamDeleted
  MatchCancelled
  FieldRejected
}

Enum preference_notification_type {
  MatchUpdates
  TeamNews
  BookingAlerts
  JoinRequests
  SystemMessages
  Promotions
  Comments
  Reactions
}

// --- Tables ---

Table UserAccount {
  userId integer [primary key]
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  passwordHash varchar(255) [not null]
  roles "user_role[]" [not null]
  status user_status [not null, default: 'Pending']
  isVerified boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
  contactInfo text
  location varchar(255)
  latitude float
  longitude float
}

Table Session {
  sessionId varchar(255) [primary key]
  userId integer [not null, ref: > UserAccount.userId]
  createdAt datetime [not null, default: `now()`]
  expiresAt datetime [not null]
  ipAddress varchar(45)
  userAgent text
}

Table PlayerProfile {
  playerId integer [primary key]
  userId integer [unique, not null, ref: - UserAccount.userId]
  displayName varchar(255) [not null]
  position varchar(100)
  skillLevel integer [note: '1-10 scale']
  bio text
  profileImage varchar(500)
  dateOfBirth date
  height float
  weight float
  preferredFoot preferred_foot
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table TeamProfile {
  teamId integer [primary key]
  teamName varchar(255) [unique, not null]
  description text
  logoUrl varchar(500)
  leaderId integer [not null, ref: > UserAccount.userId]
  status verification_status [not null, default: 'Pending']
  rejectionReason text
  location varchar(255)
  latitude float
  longitude float
  skillLevel integer
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table TeamRoster {
  rosterId integer [primary key]
  teamId integer [not null, ref: > TeamProfile.teamId]
  playerId integer [not null, ref: > PlayerProfile.playerId]
  role roster_role [not null, default: 'Member']
  joinedAt datetime [not null, default: `now()`]
  isActive boolean [not null, default: true]

  indexes {
    (teamId, playerId) [unique]
  }
}

Table JoinRequest {
  requestId integer [primary key]
  teamId integer [not null, ref: > TeamProfile.teamId]
  playerId integer [not null, ref: > PlayerProfile.playerId]
  status request_status [not null, default: 'Pending']
  message text
  createdAt datetime [not null, default: `now()`]
  processedAt datetime
}

Table FieldProfile {
  fieldId integer [primary key]
  ownerId integer [not null, ref: > UserAccount.userId]
  fieldName varchar(255) [not null]
  description text
  location varchar(500) [not null]
  latitude float
  longitude float
  defaultPricePerHour decimal(10,2) [not null]
  capacity integer
  status verification_status [not null, default: 'Pending']
  rejectionReason text
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table FieldPricingRule {
  pricingRuleId integer [primary key]
  fieldId integer [not null, ref: > FieldProfile.fieldId]
  name varchar(100) [not null]
  dayOfWeek "day_of_week[]"
  startTime time [not null]
  endTime time [not null]
  pricePerHour decimal(10,2) [not null]
  priority integer [not null, default: 0]
  isActive boolean [not null, default: true]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]

  indexes {
    (fieldId, name) [unique]
  }
}

Table CancellationPolicy {
  policyId integer [primary key]
  fieldId integer [unique, not null, ref: - FieldProfile.fieldId]
  freeCancellationHours integer [not null, default: 24]
  lateCancellationPenaltyPercent decimal(5,2) [not null, default: 50.00]
  noShowPenaltyPercent decimal(5,2) [not null, default: 100.00]
  refundProcessingDays integer [not null, default: 7]
  policyDescription text
  isActive boolean [not null, default: true]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table FieldCalendar {
  calendarId integer [primary key]
  fieldId integer [not null, ref: > FieldProfile.fieldId]
  date date [not null]
  startTime time [not null]
  endTime time [not null]
  status calendar_status [not null, default: 'Available']
  bookingId integer [ref: > BookingRequest.bookingId]
}

Table BookingRequest {
  bookingId integer [primary key]
  fieldId integer [not null, ref: > FieldProfile.fieldId]
  teamId integer [not null, ref: > TeamProfile.teamId]
  requesterId integer [not null, ref: > UserAccount.userId]
  date date [not null]
  startTime time [not null]
  endTime time [not null]
  status booking_status [not null, default: 'Pending']
  notes text
  createdAt datetime [not null, default: `now()`]
  processedAt datetime
}

Table MatchEvent {
  matchId integer [primary key]
  hostTeamId integer [not null, ref: > TeamProfile.teamId]
  opponentTeamId integer [ref: > TeamProfile.teamId]
  fieldId integer [ref: > FieldProfile.fieldId]
  bookingId integer [ref: > BookingRequest.bookingId]
  matchDate date [not null]
  startTime time [not null]
  endTime time
  status match_status [not null, default: 'PendingApproval']
  visibility match_visibility [not null, default: 'Public']
  description text
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table MatchInvitation {
  invitationId integer [primary key]
  matchId integer [not null, ref: > MatchEvent.matchId]
  invitingTeamId integer [not null, ref: > TeamProfile.teamId]
  invitedTeamId integer [not null, ref: > TeamProfile.teamId]
  status invitation_status [not null, default: 'Pending']
  message text
  createdAt datetime [not null, default: `now()`]
  respondedAt datetime
}

Table AttendanceRecord {
  attendanceId integer [primary key]
  matchId integer [not null, ref: > MatchEvent.matchId]
  playerId integer [not null, ref: > PlayerProfile.playerId]
  teamId integer [not null, ref: > TeamProfile.teamId]
  status attendance_status [not null, default: 'Pending']
  confirmedAt datetime
  confirmedBy integer [ref: > UserAccount.userId]

  indexes {
    (matchId, playerId, teamId) [unique]
  }
}

Table TeamWallet {
  walletId integer [primary key]
  teamId integer [unique, not null, ref: - TeamProfile.teamId]
  balance decimal(15,2) [not null, default: 0]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table TransactionLog {
  transactionId integer [primary key]
  walletId integer [not null, ref: > TeamWallet.walletId]
  type transaction_type [not null]
  amount decimal(15,2) [not null]
  description text
  category varchar(100)
  createdBy integer [not null, ref: > UserAccount.userId]
  createdAt datetime [not null, default: `now()`]
}

Table Post {
  postId integer [primary key]
  authorId integer [not null, ref: > UserAccount.userId]
  teamId integer [ref: > TeamProfile.teamId]
  content text [not null]
  visibility post_visibility [not null, default: 'Public']
  reactionCount integer [not null, default: 0]
  commentCount integer [not null, default: 0]
  isHidden boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table Comment {
  commentId integer [primary key]
  postId integer [not null, ref: > Post.postId]
  authorId integer [not null, ref: > UserAccount.userId]
  content text [not null]
  parentCommentId integer [ref: > Comment.commentId]
  isHidden boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table Reaction {
  reactionId integer [primary key]
  entityType reaction_entity_type [not null]
  entityId integer [not null]
  userId integer [not null, ref: > UserAccount.userId]
  type reaction_type [not null]
  createdAt datetime [not null, default: `now()`]

  indexes {
    (entityType, entityId, userId) [unique]
  }
}

Table Report {
  reportId integer [primary key]
  reporterId integer [not null, ref: > UserAccount.userId]
  reportedUserId integer [ref: > UserAccount.userId]
  contentId integer
  contentType report_content_type [not null]
  reason varchar(255) [not null]
  details text
  status report_status [not null, default: 'Pending']
  createdAt datetime [not null, default: `now()`]
  resolvedAt datetime
}

Table Notification {
  notificationId integer [primary key]
  userId integer [not null, ref: > UserAccount.userId]
  type notification_type [not null]
  title varchar(255) [not null]
  message text [not null]
  relatedEntityId integer
  relatedEntityType varchar(100)
  isRead boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
}

Table NotificationPreference {
  preferenceId integer [primary key]
  userId integer [not null, ref: > UserAccount.userId]
  notificationType preference_notification_type [not null]
  isEnabled boolean [not null, default: true]
  pushEnabled boolean [not null, default: true]
  emailEnabled boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]

  indexes {
    (userId, notificationType) [unique]
  }
}

Table MatchResult {
  resultId integer [primary key]
  matchId integer [unique, not null, ref: - MatchEvent.matchId]
  homeScore integer [not null]
  awayScore integer [not null]
  winnerId integer [ref: > TeamProfile.teamId]
  notes text
  recordedBy integer [not null, ref: > UserAccount.userId]
  createdAt datetime [not null, default: `now()`]
}

Table Amenity {
  amenityId integer [primary key]
  name varchar(100) [unique, not null]
  description text
  icon varchar(100)
  isActive boolean [not null, default: true]
}

Table FieldAmenity {
  fieldAmenityId integer [primary key]
  fieldId integer [not null, ref: > FieldProfile.fieldId]
  amenityId integer [not null, ref: > Amenity.amenityId]
  quantity integer [default: 1]
  notes text

  indexes {
    (fieldId, amenityId) [unique]
  }
}

Table MediaAsset {
  assetId integer [primary key]
  ownerId integer [not null, ref: > UserAccount.userId]
  ownerType media_owner_type [not null]
  entityId integer [not null]
  fileName varchar(255) [not null]
  storagePath varchar(500) [not null]
  fileType media_file_type [not null]
  fileSize integer [not null]
  mimeType varchar(100) [not null]
  createdAt datetime [not null, default: `now()`]
}

Table ModerationLog {
  logId integer [primary key]
  moderatorId integer [not null, ref: > UserAccount.userId]
  targetUserId integer [not null, ref: > UserAccount.userId]
  action moderation_action [not null]
  reason text [not null]
  details text
  createdAt datetime [not null, default: `now()`]
}

// --- Table Groups ---

TableGroup User_Authentication {
  UserAccount
  Session
}

TableGroup Player_Team {
  PlayerProfile
  TeamProfile
  TeamRoster
  JoinRequest
  TeamWallet
  TransactionLog
}

TableGroup Field_Booking {
  FieldProfile
  FieldPricingRule
  CancellationPolicy
  FieldCalendar
  BookingRequest
  Amenity
  FieldAmenity
}

TableGroup Match_Management {
  MatchEvent
  MatchInvitation
  AttendanceRecord
  MatchResult
}

TableGroup Social_Community {
  Post
  Comment
  Reaction
  Report
  ModerationLog
}

TableGroup System_Notification {
  Notification
  NotificationPreference
  MediaAsset
}
